# phone-number-validator

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml  tests-and-code-quality.yaml
phone-number-validator/: __init__.py  validator.py
phone_number_validator/config/: url_patterns.py
tests/: conftest.py  test_call_api.py  test_validator.py
