[tool.poetry]
name = "phone_number_validator"
version = "0.1.0"
description = ""
authors = ["flavien-hugs <flavienhugs@pm.me>"]
readme = "README.md"
packages = [{include = "phone_number_validator"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
black = "^24.8.0"
flake8 = "^7.1.1"
bandit = "^1.7.9"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-httpx = "^0.30.0"
pytest-asyncio = "^0.23.8"
faker = "^27.0.0"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"

[tool.flake8]
max-line-length = 120
exclude = [
  ".git",
  "tests",
  "__pycache__"
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.docker
    | \*.egg-info
    | _build
    | buck-out
    | build
    | dist
    | tests
  )/
)
'''

[tool.pytest.ini_options]
env_override_existing_values = 1
capture = "no"
log-cli-level = "INFO"
python_files = "test_*.py"
asyncio_mode = "auto"
filterwarnings = [
  "ignore",
  "ignore:.*U.*mode is deprecated:DeprecationWarning"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
